# deadline-cloud-for-after-effects

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  README.md  depsBundle.py  depsBundle.sh  hatch.toml  hatch_custom_hook.py  jsxbundler.py  pyproject.toml  requirements-release.txt  requirements-testing.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml  maintenance.yml
.github/workflows/: build_installers.yml  release_publish.yml
install_builder/: deadline-cloud-for-after-effects.xml
installer/: DeadlineCloudForAfterEffectsSubmitter.xml
pipeline/: build_installer.ps1  build_installer.sh  test_installer.ps1  test_installer.sh
scripts/: _project.py  add_copyright_headers.sh  build_installer.py  build_installer_cli.py  common.py  deps_bundle.py  find_installbuilder.py
src/: OpenAESubmitter.jsx
src/deadline/ae_adaptor/AEAdaptor/: font_installer.py
src/submission/: JobTemplateHelper.jsx  SubmitBundle.jsx
src/ui/: SubmitterUI.jsx
src/utils/: Logger.jsx  Utils.jsx
test/installer/: test_installer.py
test/unit/: test_copyright_headers.py
